tests/ok/anonymous_function_comprehensive.cz
// Test anonymous function with actual parameters and body
fn main() i32 {
    // Test anonymous function with multiple parameters
    fn(i32 x, i32 y) i32 { return x + y }
    
    // Test anonymous function with mutable parameters
    fn(mut i32 x) i32 { return x * 2 }
    
    // Test anonymous function with different return types
    fn(i32 a) bool { return a > 0 }
    
    // Test anonymous function with complex body
    fn(i32 val) i32 {
        i32 result = val * 2
        return result + 1
    }
    
    return 0
}
